Tying to fix the height on mobile for cllient app

--- a/nginx/clientapp/src/assets/styles/paaspop_styling.scss
+++ b/nginx/clientapp/src/assets/styles/paaspop_styling.scss
@@ -64,7 +64,7 @@ body {
 
 .container {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	font-family: Montserrat-Thin;
 	font-size: 16px;
 	display: flex;
